	- The Oculus: Proof of Demise: Ley-Guardian Eregos
	- Azjol-Nerub: Proof of Demise: Anub'arak
	- Ahn'kahet: The Old Kingdom: Proof of Demise: Herald Volazj
	- Halls of Stone: Proof of Demise: Sjonnir The Ironshaper
	- Halls of Lightning: Timear Foresees Titanium Vanguards in your Future!
	- Halls of Lightning: Proof of Demise: Loken



Version 4.13.02  (for WOTLK Classic)  September 9, 2022

- German translation added for Wrath of the Lich King quests.  This translation is from Patch 3.3.3 and may be inaccurate.




Version 4.13.01  (for WOTLK Classic)  September 4, 2022

- TOC updated to 30400 for WOTLK Classic Patch 3.4.0.
- Quest data copied over from old AtlasQuest version 4.4.3, the last version before Cataclysm.
- Some quests are going to be missing or possibly inaccurate as the quest data represents the last original WOTLK patch, 3.3.3, and may not reflect the current stage in WOTLK classic.
- Some UI bugs or features may be broken or disabled.  I no longer have the time or know-how to fix and modernize AtlasQuest and this release is being provided as a "better than nothing" sort of situation.  If anyone wants to fix the bugs I'd be happy to incorporate the fixes and provide credit.
- I do not guarantee any future releases. 




Version 4.12.83  (for TBC Classic)  September 19, 2021

- "Color quest titles in blue if in questlog" option should be working.
- Updated some quest & item names that referred to Alex Afrasiabi and have been changed. 
- TOC updated for Patch 2.5.2.
- FIX: Corrected bug where quests weren't showing for anything.  Huge thanks to Flubik on CurseForge for helping.




Version 4.12.82  (for TBC Classic)  June 10, 2021

- Fixed: Underbog: Bring Me A Shrubbery! requires Friendly reputation.  (thanks Zilom)